--- a/index.html
+++ b/index.html
@@ -34,24 +34,26 @@
   <h2>Projects</h2>
 
   <!-- Project 1 -->
-  <div class="project-box">
-    <div class="project-images">
-      <img src="images/project1a.jpg" alt="Project 1 Image 1">
-      <img src="images/project1b.jpg" alt="Project 1 Image 2">
-    </div>
-    <h3>Live | Haji Abdul Habib Attari Special Speech | Jumma Mubarak...</h3>
-    <a href="https://www.youtube.com/live/d6DP8QRFBZo?si=mHNB9jPjCIZ1EsmA" target="_blank" class="btn">Watch on YouTube</a>
+ <!-- Project 1 -->
+<div class="project-box">
+  <div class="project-images">
+    <img src="images/project1a.jpg" alt="Project 1 Image 1"/>
+    <img src="images/project1b.jpg" alt="Project 1 Image 2"/>
   </div>
+  <h3>Live | Haji Abdul Habib Attari Special Speech | Jumma Mubarak...</h3>
+  <a href="https://www.youtube.com/live/d6DP8QRFBZo?si=mHNB9jPjCIZ1EsmA" target="_blank" class="watch-button">▶ Watch Full Video</a>
+</div>
 
-  <!-- Project 2 -->
-  <div class="project-box">
-    <div class="project-images">
-      <img src="images/project2a.jpg" alt="Project 2 Image 1">
-      <img src="images/project2b.jpg" alt="Project 2 Image 2">
-    </div>
-    <h3>Madni Kafla of Madni Channel Naatkhuaw | Competition | Team A,B</h3>
-    <a href="https://youtu.be/zc751yyLvXc?si=zMAAQcss6MnVdlrX" target="_blank" class="btn">Watch on YouTube</a>
+<!-- Project 2 -->
+<div class="project-box">
+  <div class="project-images">
+    <img src="images/project2a.jpg" alt="Project 2 Image 1"/>
+    <img src="images/project2b.jpg" alt="Project 2 Image 2"/>
   </div>
+  <h3>Madni Kafla of Madni Channel Naatkhuaw | Competition | Team A,B</h3>
+  <a href="https://youtu.be/zc751yyLvXc?si=AuQShoTwhsqbsbAP" target="_blank" class="watch-button">▶ Watch Full Video</a>
+</div>
+
 </section>
     </div>
   </section>
