--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
     </div>
       <h1>Naat ki Duniya</h1>
       <p>Photographer | 🎬 Videographer | 🔴 Live Streamer</p>
-      <div class="hero-buttons">
-        <a href="#about">About</a>
-        <a href="#projects">Projects</a>
-        <a href="#links">Links</a>
-        <a href="#contact">Contact</a>
-      </div>
+      <div class="nav-buttons">
+  <a href="#about" class="nav-btn">About</a>
+  <a href="#projects" class="nav-btn">Projects</a>
+  <a href="#links" class="nav-btn">Links</a>
+  <a href="#contact" class="nav-btn">Contact</a>
+</div>
       <section id="about" class="about">
   <h2>About Me</h2>
   <p>
